			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2729 2005/03/02 04:00:50 suz Exp $

<200503>
2005-03-02  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/ip6_output.c: fixed a freebsd5 kernel crash when
	  WITNESS debug option is enabled

2005-03-01  ryuji <ryuji@sfc.wide.ad.jp>
	* "mdd" is replaced by "babymdd". please see man page for details.

2005-03-01  SUZUKI, Shinsuke <suz@kame.net>
	* integrated dhcp6lc functionality into dhcp6c ('i' option)

<200502>
2005-02-28  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/sys/net/mipsock.c, kame/kame/shisad/mnd.c: Fixed word alignment
	problems.

2005-02-22  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/net/pf.c, freebsd5/sys/contrib/pf/net/pf.c: fixed a bug that
	  PF discards every packet with option headers.

	  Reported by: Stig Venaas

2005-02-22  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/ip6_input.c: fixed PF malfunction for inbound
	  IPv6 traffic on freebsd5.

2005-02-15  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ipsec.c: (ipsec[46]_in_reject): fixed
	unexpected panic on freebsd5.

Mon Feb  7 12:02:16 JST 2005	keiichi@iijlab.net
	* freebsd4: Upgrade to 4.11-RELEASE

<200501>
2005-01-31  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/sys/netinet6/mip6.c: stop proxy ND on a home agent when 
	the home agent daemon was terminated.
	This problem was found by Christian Vogt<chvogt@tm.uka.de>.

2005-01-23  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/nd6.h: fixed an IPv6 packet output failure 
	  when an ICMPv6 Redirect message announces that the destination
	  is onlink in prior to the packet output.

2005-01-21  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/{nd6.c, nd6_nbr.c}: fixed a loss of fragmented 
	  packets when the corresponding NDP state is not resolved.

2005-01-17  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/icmp6.c: ignores ICMPv6 code field in case of 
	  ICMPv6 Packet-Too-Big.

2005-01-15  suz@crl.hitachi.co.jp